--- a/index.html
+++ b/index.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <!-- contenido -->
+
+  <div class="container">
+    <section class="image-logo">
+      <img src="../images/phones.png" alt="Instagram-Image">
+      </img>
+    </section>
+    <!-- textos -->
+    <section class="text">
+      <div id="cabecera">
+        <img src="../images/brand.png" alt="Instagram-Logo">
+        </img>
+        <button class="button">
+        <p>Log In</p>
+          <img class="log-in" src="../images/home.png" alt="Log-In">
+          </img>
+        </button>
+      </div>
+
+      <div class="content">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.</p>
+        <p>Oh yeah, did we mention it's free? </p>
+      </div>
+    </section>
+    <!-- botones -->
+    <button id="botones">
+      <img src="../images/badge-iphone.png" alt="Apple-Store">
+      </img>
+      <img src="../images/badge-android.png" alt="Google-Play">
+      </img>
+    </button>
+  </div>
+
+  <!-- footer -->
+  <section id="footer">
+    <p> About Us Support Blog Press API Jobs Privacy Terms &copy;2014 Instagram
+    </p>
+  </section>
+  
+</body>
+
 </html>
