--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="container-main">
+      <img class="phones" src="./images/phones.png" alt="phones">
+      <div class="main-info">
+        <div class="logo-login">
+          <img src="./images/brand.png" alt="ig-logo">
+          <button class="login-button"><img src="./images/home.png" alt="home">Log in</button>
+        </div>
+        <div class="main-text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. <br> Take a picture or video, choose a filter to transform its look and feel, then post
+            to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world. <br>
+            Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="mobile-apps">
+          <img src="./images/badge-iphone.png" alt="app-store">
+          <img src="./images/badge-android.png" alt="android-store">
+        </div>
+      </div>
+    </div>
+    <footer>
+      About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    </footer>
+    Download on the App Store Get it on Google Play
+  </div>
+
+</body>
+
 </html>
