--- a/index.html
+++ b/index.html
@@ -1,16 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+
+    <section id="jumbotron">
+        <div class="img">
+
+            <img src="./images/phones.png" alt="">
+        </div>
+
+        <div class="DivInstagram">
+
+            <img src="./images/brand.png" alt="">
+
+            <div style="display: inline-block; ">
+
+                <button class="btnLogin">
+                      <img class="ImgLogin" src="./images/home.png" alt="">
+                      <div class="textButton">Log in</div>
+                    </button>
+            </div>
+        </div>
+
+        <div class="DivTexto">
+
+            <h1 class="Titulo">Capture and Share the World's Moments </h1>
+
+            <p class="texto">
+
+                Instagram is a fast, beautiful and fun way to share your life with friends and family
+
+            </p>
+            <br>
+            <br>
+
+            <p class="texto">
+
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+            </p>
+            <br>
+            <br>
+            <p class="textoFree">
+
+                Oh yeah, did we mention it's free?
+
+            </p>
+            <br>
+            <br>
+
+            <div class="Descargas">
+
+                <img class="btnDescargas" src="./images/badge-iphone.png" alt="">
+                <img class="btnDescargas" src="./images/badge-android.png" alt="">
+
+            </div>
+        </div>
+
+
+    </section>
+
+
+
+
+
+
+</body>
+
+
+
 </html>
