--- a/index.html
+++ b/index.html
@@ -4,13 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
+
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header></header>
+  <div class="top-img">
+    <img src="/images/brand.png" alt="Instagram Logo" class="logo">
+    <img src="/images/home.png" alt="home btn" class="home-btn">
+</div>
+  
+    <section class="section-main">
+<div>
+      <img src="/images/phones.png" alt="phones" class="phones">
+    </div>
+              <div id="content">
+                   <div class="information">
+
+                        <h2>Capture and Share the World's Moments</h2>
+     
+                        <p>Instagram is a fast, beautiful and fun way to share your life with
+                         friends and family.</p> 
+                              
+                          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                         &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+                          <p>Oh yeah, did we mention it's free?</p>
+
+                     <div class="app-img">
+
+                          <img src="/images/badge-iphone.png" alt="iphone">
+                         <img src="/images/badge-android.png" alt="android">
+
+                     </div>
+
+                   </div>
+
+              </div>
+
+     </section>
+
+      <footer>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+
+
   </body>
 </html>
