--- a/index.html
+++ b/index.html
@@ -4,13 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+<main>
+      <div class="phone-img">
+        <img src="/lab-css-instagram-clone/images/phones.png" alt="phone-picture">
+      </div>
+    <div class="rightContainer">
+
+      <div class="logoLogin">
+
+        <div class="logo">
+          <img src="/lab-css-instagram-clone/images/brand.png" alt="instagram-logo">
+        </div>  
+          <div class="login">
+            <button type="button"><img src="/lab-css-instagram-clone/images/home.png" alt="home-icon"> Login</button>
+          </div>
+        </div>
+      
+      <div class="textContainer">
+        <div class="title">
+          <h1>Capture and Share the World's Moments</h1>
+        </div>
+        <p class="body-text">
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+          friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="apps">
+          <img src="/lab-css-instagram-clone/images/badge-iphone.png" alt="download-apple">
+          <img src="/lab-css-instagram-clone/images/badge-android.png" alt="download-android">
+        </div>
+      </div>
+    </div>
+</main>
+
+    <footer>
+      <ul>
+        <li>About US</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li id="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+
   </body>
 </html>
