--- a/index.html
+++ b/index.html
@@ -5,12 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <div class="phones">
+        <img src="/images/phones.png" alt="phones">
+      </div>
+      <div class="instagram">
+        <section class="home">
+          <img src="/images/brand.png" alt="brand">
+          <section class="log">
+            <img src="/images/home.png" alt="home">
+            <p>Log in</p>
+          </section>
+        </section>
+        <section>
+          <section class="moments">
+          <h3>Capture and Share the World's Moments </h3>
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+             friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free? 
+          </p>
+          </section>  
+          <section class="app">
+            <img src="/images/badge-iphone.png" alt="badge-iphone">
+            <img src="/images/badge-android.png" alt="badge-android">
+          </section>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
   </body>
 </html>
