--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <li> <a href="#jobs">  Jobs </a></li>
   <li><a href="#privacy"> Privacy </a></li>
   <li><a href="#terms">   Terms </a></li>
-  <li><a href="#terms">&copy; 2014 Instagram</a></li>
+  <li class="last"><a href="#terms">&copy; 2014 Instagram</a></li>
   </ul>
   </footer>
 </html>
