--- a/index.html
+++ b/index.html
@@ -4,13 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+     <!-- section 1-->  
+    <section id="main-section">
+      <div class="phones">
+        <img src="images/phones.png" alt="phones">
+      </div>
+      <div class="instagram">
+         <div class="insta-logo">
+          <img src="images/brand.png" alt ="brand">
+         </div>
+         <div class="btn">
+          <img src="images/home.png">
+          <a class="btn-login" href="">Log in</a>
+        </div>
+      </div>
+      <div id="text">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+           Oh yeah, did we mention it's free?</p>
+      </div>
+      <div id="downloads">
+        <div>
+          <img src="images/badge-iphone.png" alt="iphone-download">
+        </div>
+        <div>
+          <img src="images/badge-android.png" alt="android-download">
+        </div>
+      </div>
+    </section> 
+     <!-- section 2 -->  
+    <section id="nav-bar">
+      <nav>
+        <ul>
+          <li><a href="">ABOUT US</a></li>
+          <li><a href="">SUPPORT</a></li>
+          <li><a href="">BLOG</a></li>
+          <li><a href="">PRESS</a></li>
+          <li><a href="">API</a></li>
+          <li><a href="">JOBS</a></li>
+          <li><a href="">PRIVACY</a></li>
+          <li><a href="">TERMS</a></li>
+          <li class="copy">&copy; 2014 INSTAGRAM</li>
+        </ul>
+      </nav>
+    </section>
   </body>
 </html>
