--- a/index.html
+++ b/index.html
@@ -1,16 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="./styles/style.css">
+  <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel="stylesheet">
+
+</head>
+
+<body>
+  <div id="full-container-instagram">
+    <div class="general-container">
+      <div class="general-container-image">
+        <img src="./images/phones.png" alt="Image of phones using Instagram">
+      </div>
+
+      <div class="general-container-content">
+        <div class="gc-header">
+          <img src="./images/brand.png" alt="Instagram brand image">
+          <div class="gc-header-button">
+            <button id="button-home">
+              <img src="./images/home.png" alt="Home icon button">
+              <p>Log in</p>
+            </button>
+          </div>
+        </div>
+        <div class="gc-content">
+          <h1>Capture and Share<br> the World's Moments</h1>
+          <p>Instagram is a <span class="strong-text">fast</span>, <span class="strong-text">beautiful</span> and <span
+              class="strong-text">fun</span> way to share your life with
+            friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to
+            Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="gc-content-buttons-download">
+            <div> <a href="https://apps.apple.com/us/app/instagram/id389801252" target="_blank"><img
+                  src="./images/badge-iphone.png" alt="Badge iphone button to download"></a></div>
+            <div> <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en&gl=US"
+                target="_blank"><img src="./images/badge-android.png" alt="Badge iphone button to download"></a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <ul>
+        <li><a href="#about_us">About Us</a></li>
+        <li><a href="#support">Support</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#press">Press</a></li>
+        <li><a href="#api">API</a></li>
+        <li><a href="#jobs">Jobs</a></li>
+        <li><a href="#privacy">Privacy</a></li>
+        <li><a href="#terms">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+  </div>
+</body>
+
 </html>
