--- a/index.html
+++ b/index.html
@@ -7,24 +7,28 @@
     <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    <section>
-      <img src="./images/phones.png" alt="Phones">
-      <article>
-        <div>
-          <img src="./images/brand.png" alt="instragram logo">
-          <button onclick="">Log in</button>
+    <section id="landing">
+      <div class="phonesDiv">
+        <img  id="phone" src="./images/phones.png" alt="Phones">
+      </div>
+      <article class="rightSide">
+        <div class="logoDiv" >
+          <img id = "instagramLogo"src="./images/brand.png" alt="instragram logo">
+          <button onclick=""> <img class="house" src="https://www.pikpng.com/pngl/b/111-1117338_blue-house-vector-png-clipart.png" alt=""> Log in</button>
         </div>
-        <div>
-          <h3>Capture and Share the World's Moments</h3>
-          <p>Instagram is a fast, beautiful and fun way to share your life with
-            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-            Oh yeah, did we mention it's free?</p>
-        </div>
-        <div>
-          <img src="./images/badge-iphone.png" alt="Download on the App Store badge">
-          <img src="./images/badge-android.png" alt="Get it on Google badge">
-        </div>
+        <section id="degrBack">
+          <div>
+            <h3>Capture and Share the World's Moments</h3>
+            <p>Instagram is a fast, beautiful and fun way to share your life with
+              friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              Oh yeah, did we mention it's free?</p>
+          </div>
+          <div id="badges">
+            <img class="badge" id="iphone" src="./images/badge-iphone.png" alt="Download on the App Store badge">
+            <img class="badge" src="./images/badge-android.png" alt="Get it on Google badge">
+          </div>
+        </section>
       </article>
     </section>
     <ul>
@@ -38,7 +42,5 @@
       <li><a href="#">TERMS</a></li>
       <li>&copy; 2014 Instagram</li>
     </ul>
-    Instagram Capture and Share the World's Moments  Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
   </body>
 </html>
