--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 					<img src="/images/brand.png" alt="" />
 					<img id="home" src="/images/home.png" alt="" />
 				</nav>
+				<div>
+					<h5>Capture and Share the World's Moments</h5>
 
-				<h5>Capture and Share the World's Moments</h5>
-
-				<p>Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram — it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free?</p>
+					<p>Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram — it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free?</p>
+				</div>
 			</div>
 		</main>
 	</body>
