--- a/index.html
+++ b/index.html
@@ -5,12 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="background"></div>
+
+    <section>
+      <img src="./images/phones.png" alt="phones">
+      <header class="info-block">
+        <div class="title">
+          <img src="./images/brand.png" alt="brand">
+          <div class="button">
+            <img src="./images/home.png" alt="home">
+            <p>Log in</p>
+          </div>
+        </div>
+        
+        <article class="description">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </article>
+
+        <div class="download-links">
+          <img src="./images/badge-iphone.png" alt="badge-iphone">
+          <img src="./images/badge-android.png" alt="badge-android">
+        </div>
+
+      </header>
+    </section>
+
+    <footer>
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+      </nav>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
+
   </body>
 </html>
