--- a/index.html
+++ b/index.html
@@ -5,12 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
+
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class='main'>
+
+
+      <img src='./images/phones.png' alt='phones' id='telefono'>
+
+      <div id='brand'>
+        <img src='./images/brand.png' alt='logo'>
+        <button onclick=""> <img class="house" src='./images/home.png'>Log in</button>
+      
+
+        <section id='text'>
+          <h2 id='titol'>Capture and Share<br> the World's Moments</h2>
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br> with friends and family.
+
+            Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram 
+            it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.<br>
+
+            Oh yeah, did we mention it's free?
+          </p>
+
+          <div>
+            <img src='./images/badge-iphone.png' alt='iphone'>
+            <img src='./images/badge-android.png' alt='android'>
+          </div>
+
+        </section>
+        </div>
+    </section>
+
   </body>
+
+  <footer class='list'>
+    <ul>
+      <li><a href="#">ABOUT US</a></li>
+      <li><a href="#">SUPPORT</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">PRESS</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">JOBS</a></li>
+      <li><a href="#">PRIVACY</a></li>
+      <li><a href="#">TERMS</a></li>
+      <li id='copy'>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </html>
