--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewpoint" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel=StyleSheet href="styles/style.css">
+</head>
+
+<body>
+  <section>
+    <img src="images/phones.png">
+    <div class="main">
+      <div class="Instagram">
+        <img src="images/brand.png" alt="Instagram Brand">
+        <a class="login" href=""><img src="images/home.png" alt="Home Log In"> Log In</a>
+      </div>
+      <div class="frame">
+        <h1>Capture and Share the World's Moments</h1>
+        <p> Instagram is a <spam>fast</spam>, <spam>beautiful</spam> and <spam>fun</spam> way to share your life with
+          friends and family.</p>
+        <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          & mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.</p>
+        <p>Oh yeah, did we mention it's free? </p>
+      </div>
+      <div class="movil">
+        <img src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
+      </div>
+    </div>
+    
+  </section>
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#"> Support </a></li>
+      <li><a href="#"> Blog</a></li>
+      <li><a href="#"> Press</a></li>
+      <li><a href="#"> API</a></li>
+      <li><a href="#"> Jobs</a></li>
+      <li><a href="#"> Privacys</a></li>
+      <li><a href="#"> Terms</a></li>
+      <li>&copy;2014 Instagram</li>
+    </ul>
+  </footer>
+</body>
+
 </html>
