--- a/index.html
+++ b/index.html
@@ -1,16 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+
+  <div class="">
+
+    <!-- IMAGEN Y TEXTO -->
+    <div class="flex-container container">
+
+      <img src="./images/phones.png" alt="phones with instagram layout">
+
+
+      <div class="container-derecha">
+
+        <div class="container-derecha-arriba">
+          <img src="./images/brand.png" alt="Brand logo">
+
+          <button>
+            <img src="./images/home.png" alt="Home button icon">
+            <p>Log in</p>
+          </button>
+        </div>
+
+
+        <section>
+          <h1>Capture and Share the World's Moments</h1>
+
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.</p>
+
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.</p>
+
+          <p>Oh yeah, did we mention it's free?</p>
+
+        </section>
+
+        <div class="links">
+          <img src="./images/badge-android.png" alt="">
+          <img src="./images/badge-iphone.png" alt="">
+        </div>
+      </div>
+
+    </div>
+
+    <footer class="footer">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+
+      <p>&copy; 2014 Instagram</p>
+    </footer>
+
+  </div>
+
+</body>
+
 </html>
