--- a/index.html
+++ b/index.html
@@ -3,14 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div>
+      <img id="phones-img" src="/images/phones.png" alt="phones" />
+      <div id="floated-element">
+        <div id="above-text">
+          <img src="/images/brand.png" alt="instagram logo" />
+          <button>Home</button>
+        </div>
+        <div id="text-div">
+          <div>
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+              Instagram is a <strong>fast</strong>,
+              <strong>beautiful</strong> and <strong>fun</strong> way to share
+              your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div id="below-text">
+            <img src="/images/badge-iphone.png" alt="app store" />
+            <img src="/images/badge-android.png" alt="play store" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="footer">
+      Instagram Download on the App Store Get it on Google Play About Us Support
+      Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    </div>
   </body>
 </html>
