--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" /> 
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="main-wrapper">
+      <img id="phones" src="images/phones.png" alt="Instagram logo">
+      <div id=intro-header>
+        <img id="brand-image" src="images/brand.png" alt="Instagram logo" title="Instagram">
+        <a id="login" href="#"> 
+          <img src="images/home.png" alt="home icon">
+          Log in
+        </a>
+      </div> 
+      <div id="intro-content">
+        <div class="intro">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          </ul>
+        </div>
+        <div class="download-badges">
+          <img src="images/badge-iphone.png" alt="App store download badge" title="Download on the App Store">
+          <img src="images/badge-android.png" alt="Play store download badge" title="Get it on Google Play">
+        </div>
+    </div>
+  </div>
+</div>
+
+    <footer>
+      <ul id="footer-menu">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li id="copyright">&copy; 2014 Instagram</li>
+      </ul>  
+    </footer>
   </body>
 </html>
